<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.lino.cloud</groupId>
    <artifactId>cloud-driver</artifactId>
    <version>1.0.1</version>
    <packaging>pom</packaging>

    <modules>
        <module>cloud-driver-api</module>
        <module>cloud-driver-plugin</module>
        <module>cloud-driver-extensions</module>
        <module>cloud-driver-bootstrap</module>
        <module>cloud-driver-auth</module>
        <module>cloud-driver-platforms</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>